--- a/source/core/sass/axix/base/_config.scss
+++ b/source/core/sass/axix/base/_config.scss
@@ -1,1 +1,7 @@
 // AXIX® [v1.0.0], Configurations.
+
+
+// 1. Typography ==//==
+$axix-base-font-family:                    quote("Helvetica Neue"), Helvetica, Arial, sans-serif !default;
+$axix-base-font-family-serif:   quote("Palatino Linotype"), Palatino, Constantia, Georgia, serif !default;
+$axix-base-font-family-sans-serif:                                quote("Open Sans"), sans-serif !default;
