--- a/source/core/sass/axix/base/_config.scss
+++ b/source/core/sass/axix/base/_config.scss
@@ -5,3 +5,14 @@
 $axix-base-font-family:                    quote("Helvetica Neue"), Helvetica, Arial, sans-serif !default;
 $axix-base-font-family-serif:   quote("Palatino Linotype"), Palatino, Constantia, Georgia, serif !default;
 $axix-base-font-family-sans-serif:                                quote("Open Sans"), sans-serif !default;
+$axix-base-font-size:                                                   14px !default;
+// 1.1 Heading: <h1> to <h6>
+$axix-base-font-size-h1:                floor(($axix-base-font-size * 2.00)) !default; // ~28px
+$axix-base-font-size-h2:                floor(($axix-base-font-size * 1.74)) !default; // ~24px
+$axix-base-font-size-h3:                 ceil(($axix-base-font-size * 1.22)) !default; // ~18px
+$axix-base-font-size-h4:                floor(($axix-base-font-size * 1.18)) !default; // ~16px
+$axix-base-font-size-h5:                floor(($axix-base-font-size * 1.00)) !default; // ~14px
+$axix-base-font-size-h6:                floor(($axix-base-font-size * 0.79)) !default; // ~11px
+// 1.2 line-height
+$axix-base-line-height:                                          1.428571429 !default; // [20/14]
+$axix-line-height-computed: floor(($axix-base-font-size * $axix-base-line-height)) !default; // ~20px
