--- a/source/core/sass/axix/base/_config.scss
+++ b/source/core/sass/axix/base/_config.scss
@@ -24,3 +24,7 @@ $axix-brand-bg-color-hex:                                            #9BA2B0 !de
 $axix-brand-bg-color-rgb:                                   rgb(155,162,176) !default;
 $axix-brand-color-hex:                                               #9BBB79 !default;
 $axix-brand-color-rgb:                                      rgb(155,187,121) !default;
+$axix-brand-bg-color-dark:                            darken(#9BA2B0, 04.9%) !default;
+$axix-brand-color-dark:                               darken(#9BBB79, 29.9%) !default;
+$axix-brand-bg-color-light:                           lighten(#9BA2B0, 4.9%) !default;
+$axix-brand-color-light:                              lighten(#9BBB79, 7.9%) !default;
