--- a/source/core/sass/axix/base/_config.scss
+++ b/source/core/sass/axix/base/_config.scss
@@ -28,3 +28,4 @@ $axix-brand-bg-color-dark:                            darken(#9BA2B0, 04.9%) !de
 $axix-brand-color-dark:                               darken(#9BBB79, 29.9%) !default;
 $axix-brand-bg-color-light:                           lighten(#9BA2B0, 4.9%) !default;
 $axix-brand-color-light:                              lighten(#9BBB79, 7.9%) !default;
+$axix-headings-color:                                                inherit !default;
