--- a/source/core/sass/axix/base/_config.scss
+++ b/source/core/sass/axix/base/_config.scss
@@ -29,3 +29,7 @@ $axix-brand-color-dark:                               darken(#9BBB79, 29.9%) !de
 $axix-brand-bg-color-light:                           lighten(#9BA2B0, 4.9%) !default;
 $axix-brand-color-light:                              lighten(#9BBB79, 7.9%) !default;
 $axix-headings-color:                                                inherit !default;
+$axix-brand-base-color-hex:                                          #F15E4A !default;
+$axix-brand-base-color-rgb:                                   rgb(241,94,74) !default;
+$axix-base-white-color-hex:                                          #FFFFFF !default;
+$axix-base-white-color-rgb:                                 rgb(255,255,255) !default;
