--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -16,3 +16,7 @@
 // Copyright © 2014 - 2016 Prabhat Kumar, All Rights Reserved.
 // Licensed under Apache. ============================================
 // -------------------------------------------------------------------
+
+// Importing partials/modules through "@import" directive.
+// 1.
+@import "base/config";
