--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -24,3 +24,8 @@
 @import "base/version";
 // 3.
 @import "compass/css3";
+
+// --------------------------------
+// Sass - (3.4.21): Selective Steve
+// Compass - (v1.0.3): Polaris
+// --------------------------------
