--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -29,3 +29,9 @@
 // Sass - (3.4.21): Selective Steve
 // Compass - (v1.0.3): Polaris
 // --------------------------------
+
+// ---------------------------------- //
+//        Using @mixin directive      //
+//       @author : Prabhat Kumar      //
+//        @date  : 09-Mar-2016        //
+// ---------------------------------- //
