--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -199,3 +199,14 @@
     clear: both;
   }
 }
+
+// ==========================================
+// D. The @mixin directive for Box sizing
+// ==========================================
+// The box-sizing property is used to alter the default CSS box model used to calculate widths and heights of elements.
+// Values: content-box || border-box || inherit || initial || unset
+@mixin box-sizing($boxmodel) {
+  -webkit-box-sizing: $boxmodel;
+     -moz-box-sizing: $boxmodel;
+          box-sizing: $boxmodel;
+}
