--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -210,3 +210,17 @@
      -moz-box-sizing: $boxmodel;
           box-sizing: $boxmodel;
 }
+
+// ==========================================
+// E. The @mixin directive for User select
+// ==========================================
+// For selection options for text on the page
+// Controls the actual Selection operation.
+// Note: This doesn't have any effect on content loaded as chrome, except in textboxes.
+// Values: none || text || all and -moz-none or element for Firefox 21 and -ms-, respectively.
+@mixin user-select($select) {
+  -webkit-user-select: $select;
+     -moz-user-select: $select;
+      -ms-user-select: $select; // IE10+
+          user-select: $select;
+}
