--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -253,3 +253,17 @@
   #{$property}: -moz-calc(#{$value});
   #{$property}: calc(#{$value});
 }
+
+// ==========================================
+// I. Visually hide an element.
+// ==========================================
+%visuallyhidden {
+  margin: -1px;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
+  position: absolute;
+}
