--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -292,3 +292,10 @@
   }
   #{$property}: $value;
 }
+
+// ==========================================
+// L. The @function directive to strip unit.
+// ==========================================
+@function strip-unit($value) {
+  @return $value / ($value * 0 + 1);
+}
