--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -364,3 +364,18 @@ $cache: ();
     @extend %#{$property}-#{index(map-get($cache, $property), $value)};
   }
 }
+
+// ============================================
+// P. The @mixin directive for Hyphens.
+// ============================================
+// The hyphens CSS property tells the browser how to hyphenate words when line-wrapping.
+// Hypenation rules are language-specific. xml:lang attribute must be used.
+// Values: none || manual || auto || inherit || initial || unset
+@mixin hyphens($mode: auto) {
+  word-wrap: break-word;
+  -webkit-hyphens: $mode;
+     -moz-hyphens: $mode;
+      -ms-hyphens: $mode; // IE10+
+       -o-hyphens: $mode;
+          hyphens: $mode;
+}
