--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -379,3 +379,55 @@ $cache: ();
        -o-hyphens: $mode;
           hyphens: $mode;
 }
+
+// ==========================================
+// Q. The @mixin directive for Transitions.
+// ==========================================
+// The transition CSS property can enables to define the transition between two states of an element.
+// Different states may be defined using pseudo-classes like :hover or :active or dynamically set using JavaScript.
+// Q-1. transition - a shorthand property for below - "all".
+// Q-2. transition-property
+// Q-3. transition-delay
+// Q-4. transition-duration
+// Q-5. transition-timing-function
+
+// Q-1.
+@mixin transition($transition...) {
+  -webkit-transition: $transition;
+     -moz-transition: $transition;
+      -ms-transition: $transition;
+       -o-transition: $transition;
+          transition: $transition;
+}
+// Q-2.
+@mixin transition-property($transition-property...) {
+  -webkit-transition-property: $transition-property;
+     -moz-transition-property: $transition-property;
+      -ms-transition-property: $transition-property;
+       -o-transition-property: $transition-property;
+          transition-property: $transition-property;
+}
+// Q-3.
+@mixin transition-delay($transition-delay) {
+  -webkit-transition-delay: $transition-delay;
+     -moz-transition-delay: $transition-delay;
+      -ms-transition-delay: $transition-delay;
+       -o-transition-delay: $transition-delay;
+          transition-delay: $transition-delay;
+}
+// Q-4.
+@mixin transition-duration($transition-duration...) {
+  -webkit-transition-duration: $transition-duration;
+     -moz-transition-duration: $transition-duration;
+      -ms-transition-duration: $transition-duration;
+       -o-transition-duration: $transition-duration;
+          transition-duration: $transition-duration;
+}
+// Q-5.
+@mixin transition-timing-function($timing-function) {
+  -webkit-transition-timing-function: $timing-function;
+     -moz-transition-timing-function: $timing-function;
+      -ms-transition-timing-function: $timing-function;
+       -o-transition-timing-function: $timing-function;
+          transition-timing-function: $timing-function;
+}
