--- a/source/core/sass/axix/base/_config.scss
+++ b/source/core/sass/axix/base/_config.scss
@@ -72,3 +72,8 @@ $ease-in-out-sine:      cubic-bezier(0.445,  0.050, 0.550, 0.950);
 $ease-in-out-expo:      cubic-bezier(1.000,  0.000, 0.000, 1.000);
 $ease-in-out-circ:      cubic-bezier(0.785,  0.135, 0.150, 0.860);
 $ease-in-out-back:      cubic-bezier(0.680, -0.550, 0.265, 1.550);
+
+// 5. Setting to `true` to enable antialiased type,
+/// using the `-webkit-font-smoothing` and `-moz-osx-font-smoothing` CSS properties.
+/// @type Boolean
+$axix-body-antialiased: true !default;
