--- a/source/core/sass/axix/_axix.scss
+++ b/source/core/sass/axix/_axix.scss
@@ -431,3 +431,84 @@ $cache: ();
        -o-transition-timing-function: $timing-function;
           transition-timing-function: $timing-function;
 }
+
+// ==========================================
+// R. The @mixin directive for Animations.
+// ==========================================
+// The animation CSS property makes possible to animate transitions from one CSS style configuration to another.
+// Properties Value:-
+// R-1. animation - a shorthand property for below - "all".
+// R-2. animation-name
+// R-3. animation-duration
+// R-4. animation-timing-function
+// R-5. animation-delay
+// R-6. animation-iteration-count
+// R-7. animation-direction
+// R-8. animation-fill-mode
+// R-9. animation-play-state
+
+// R-1.
+@mixin animation($animation) {
+  -webkit-animation: $animation;
+     -moz-animation: $animation;
+      -ms-animation: $animation;
+       -o-animation: $animation;
+          animation: $animation;
+}
+// R-2.
+@mixin animation-name($name) {
+  -webkit-animation-name: $name;
+     -moz-animation-name: $name;
+      -ms-animation-name: $name;
+       -o-animation-name: $name;
+          animation-name: $name;
+}
+// R-3.
+@mixin animation-duration($duration) {
+  -webkit-animation-duration: $duration;
+     -moz-animation-duration: $duration;
+      -ms-animation-duration: $duration;
+       -o-animation-duration: $duration;
+          animation-duration: $duration;
+}
+// R-4.
+@mixin animation-timing-function($timing-function) {
+  -webkit-animation-timing-function: $timing-function;
+     -moz-animation-timing-function: $timing-function;
+      -ms-animation-timing-function: $timing-function;
+       -o-animation-timing-function: $timing-function;
+          animation-timing-function: $timing-function;
+}
+// R-5.
+@mixin animation-delay($delay) {
+  -webkit-animation-delay: $delay;
+     -moz-animation-delay: $delay;
+      -ms-animation-delay: $delay;
+       -o-animation-delay: $delay;
+          animation-delay: $delay;
+}
+// R-6.
+@mixin animation-iteration-count($iteration-count) {
+  -webkit-animation-iteration-count: $iteration-count;
+     -moz-animation-iteration-count: $iteration-count;
+      -ms-animation-iteration-count: $iteration-count;
+       -o-animation-iteration-count: $iteration-count;
+          animation-iteration-count: $iteration-count;
+}
+// R-7.
+@mixin animation-direction($direction) {
+  -webkit-animation-direction: $direction;
+     -moz-animation-direction: $direction;
+      -ms-animation-direction: $direction;
+       -o-animation-direction: $direction;
+          animation-direction: $direction;
+}
+// R-8.
+@mixin animation-fill-mode($fill-mode) {
+  -webkit-animation-fill-mode: $fill-mode;
+     -moz-animation-fill-mode: $fill-mode;
+      -ms-animation-fill-mode: $fill-mode;
+       -o-animation-fill-mode: $fill-mode;
+          animation-fill-mode: $fill-mode;
+}
+// R-9. values: running || paused ==//EOF//==
