--- a/source/core/sass/vitae.scss
+++ b/source/core/sass/vitae.scss
@@ -1,2 +1,26 @@
 @charset "UTF-8";
 // vitae.scss, for defining "Curriculum Vitaé" properties.
+
+//
+// Vitaé®
+// Curriculum Vitaé of Prabhat Kumar - CEO, Founder & Data Scientist.
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// Version    : v1.0.0
+// Build      : Everest
+// Mode       : -//-Production-//-
+// -------------------------------------------------------------------
+// @require   : Sass + Compass
+// @require   : Ruby + Node.js® + Grunt
+// -------------------------------------------------------------------
+// Designed and Build with ♥ for prabhatkumar.org/.
+// -------------------------------------------------------------------
+// @architecture    : Prabhat Kumar, http://prabhatkumar.org/
+// @author          : Prabhat Kumar, https://github.com/iamprabhat
+// -------------------------------------------------------------------
+// Copyright © 2014 - 2016 Prabhat Kumar, All Rights Reserved.
+// Licensed under Apache. ============================================
+// -------------------------------------------------------------------
+
+// Importing "AXIX®" through "@import" directive.
+// Advance eXpert Intelligent eXtreme.
+@import "axix/axix";
