--- a/source/core/sass/vitae.scss
+++ b/source/core/sass/vitae.scss
@@ -249,7 +249,7 @@ $axix-webkit-scrollbar-thumb-hover-color:       #DAA520 !default;
       list-style: none;
     }
     > ul > li:before {
-      content: '●';
+      content: '⌘';
       padding: 2px 1px;
     }
     > ul > li:first-child:before {
